style(menu): altered z-indexes to prevent overlap of carousels

--- a/src/film-database/features/menu/_fdMenu.scss
+++ b/src/film-database/features/menu/_fdMenu.scss
@@ -4,7 +4,6 @@
 
 .fdMenu {
   position: fixed;
-  z-index: 11;
   display: flex;
   gap: 48px;
   width: auto;
@@ -17,13 +16,14 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 9;
     height: 100svh;
     will-change: width;
     background: linear-gradient(to right, rgba(0, 0, 0, 1) 15%, rgba(0, 0, 0, 0.7) 100%);
   }
   &[data-modal='open'] {
+    z-index: 10;
     &::before {
+      z-index: 9;
       width: 100%;
     }
     .fdMenu__menu {
@@ -31,8 +31,12 @@
     }
   }
   &[data-modal='closed'] {
+    z-index: 2;
+    pointer-events: none;
     &::before {
+      z-index: 0;
       width: 5%;
+      pointer-events: none;
     }
     .fdMenu__menu {
       opacity: 0;
@@ -58,6 +62,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        pointer-events: all;
         &--icon {
           & svg {
             color: white;
